tests/FAIL/inlineComment.py
# EXPECT ERROR: [line 2] Error: Unexpected character.
a = 666 # inline comments not supported
